MyBatisからSpringDataJDBCに移行。